policies/standard/pod_volume_hostpath/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodVolumeHostpathPolicy
metadata:
  name: k8spodvolumehostpathpolicy
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod", "ReplicationController"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet", "ReplicaSet"]
      - apiGroups: ["batch"]
        kinds: ["Job", "CronJob"]
    excludedNamespaces: []
