policies/standard/pod_volume_hostpath/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spodvolumehostpathpolicy
  annotations:
    description: >-
      HostPath volumes should be forbidden
spec:
  crd:
    spec:
      names:
        kind: K8sPodVolumeHostpathPolicy
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spodvolumehostpathpolicy

        violation[{"msg": msg}] {
          o := input_object[_]
          v := o.spec.volumes[_]
          input_volume_has_host_path(v)
          msg := sprintf("HostPath volumes should be forbidden: %v", [input.review.object.metadata.name])
        }

        input_volume_has_host_path(v) {
          v.hostPath
        }

        input_object[o] {
          input.review.object.kind == "Pod"
          o := input.review.object
        }

        input_object[o] {
          input.review.object.kind == "CronJob"
          o := input.review.object.spec.jobTemplate.spec.template
        }

        input_object[o] {
          o := input.review.object.spec.template
        }
